--- a/app/views/reports/_daily-dpv.html.erb
+++ b/app/views/reports/_daily-dpv.html.erb
@@ -3,7 +3,7 @@
 <%=stylesheet_link_tag "reports/daily_dpv" %>
 <div class="template2">
   <div class="left">
-    <section class="content" id="data_container">
+    <section class="content">
       <div class="block">
         <div id="chart_dpv_one" class="inner"></div>
       </div>
@@ -21,8 +21,7 @@
     <section class="condition" id="condition">
       <p>Condition</p>
       <p>Model</p>
-      <select multiple class="chosen-select" data-placeholder=" " id="deffect-model">
-      </select>
+      <select multiple class="chosen-select" data-placeholder=" " id="deffect-model"></select>
       <p>Phase</p>
       <select multiple class="chosen-select" data-placeholder=" " id="deffect-phase">
       </select>
