--- a/app/views/reports/_daily-dpv.html.erb
+++ b/app/views/reports/_daily-dpv.html.erb
@@ -29,7 +29,7 @@
       <a id="retrieve-data" class="btn btn-primary retrieve_data">Retrieve Data</a>
       <div class="export">
         <p>Export to</p>
-        <a class="btn btn-success btn_excel" id="to-excel">Excel</a>
+        <a class="excel-btn excel-btn-normal" id="to-excel"></a>
       </div>
 
     </section>
