--- a/app/assets/stylesheets/reports/station_data.css.scss
+++ b/app/assets/stylesheets/reports/station_data.css.scss
@@ -42,6 +42,7 @@
 }
 .content{
   position:relative;
+  overflow-x:hidden;
   $bottom:10px;
   .setting-btn{
     position:absolute;
@@ -51,28 +52,71 @@
     display:block;
     width:$width;
     height:$width + 10;
-    background:rgba(0,0,0,0.1);
+    background:$light-blue;
     @include transition(background);
+    @include transition(right);
     cursor:pointer;
     &:hover{
-      background:rgba(0,0,0,0.2);
+      background:darken($light-blue,5%);
     }
     i{
-      color:rgba(0,0,0,0.7);
+      color:$blue;
       margin-left:$width/2 - 5px;
       position:absolute;
       top:19px;
       font-size:20px;
+      pointer-events:none;
     }
   }
   .setting-block{
+    &>p{
+      &:first-of-type{
+        color:rgba(0,0,0,0.7);
+        font-size:14px;
+        padding-top:8px;
+        padding-left:10px;
+        margin-bottom:18px;
+        border-bottom:1px solid rgba(0,0,0,0.1);
+        padding-bottom:6px;
+      }
+    }
+    .block{
+      margin-bottom:20px;
+      &:after{
+        @include after-clear;
+      }
+      $margin-bottom:10px;
+      p{
+        color:#777;
+        padding-left:10px;
+        font-size:16px;
+        margin:0px;
+        display:inline-block;
+        float:left;
+        margin-bottom:$margin-bottom;
+        .mark{
+          color:$blue-hover;
+        }
+      }
+      .colorPicker-picker{
+        float:left;
+        display: inline-block;
+        margin-bottom:$margin-bottom;
+        margin-left:13px;
+      }
+      input{
+        width:0px;
+      }
+    }
+    $width:200px;
     position:absolute;
-    height:400px;
+    height:270px;
     bottom:$bottom;
-    width:300px;
-    background:#fff;
-    right:0px;
-    border:1px solid rgba(0,0,0,0.1);
-    @include box-shadow(-2px,2px,2px,rgba(0,0,0,0.2));
+    width:$width;
+    background:$light-blue;
+    right:- ($width + 10);
+    //border:1px solid rgba(0,0,0,0.1);
+    //@include box-shadow(-2px,2px,2px,rgba(0,0,0,0.4));
+    @include transition(right);
   }
 }
