--- a/app/assets/stylesheets/help.css.scss
+++ b/app/assets/stylesheets/help.css.scss
@@ -1,5 +1,7 @@
 $blue:#5fa9da;
 $blue-hover:#69aef5;
+$yellow:#edb431;
+$green:#2ab27b;
 $light-blue:#F0F8FF;
 $red:#f75460;
 $red-hover:#f59b9b;
@@ -7,9 +9,10 @@ $green:#0cb156;
 $green-hover:transparentize($green,0.4);
 $nav-dark:#353a46;
 $golden-text:#f2c54a;
-$layout-border-color:#ddd;
-$background-grey:#f3f3f3;
+$layout-border-color:#e8e8e8;
+$background-grey:#f9f9f9;
 $alert-orange:#ff921e;
+$sidebar:lighten($nav-dark,4%);
 @mixin transition($element){
   transition:$element ease-out 0.25s
 }
@@ -79,4 +82,9 @@ $alert-orange:#ff921e;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width:$width;
+}
+@mixin border-radius-block{
+  border-radius:6px;
+  -moz-border-radius:6px;
+  -webkit-border-radius:6px;
 }
