--- a/app/assets/stylesheets/story_sets/index.css.scss
+++ b/app/assets/stylesheets/story_sets/index.css.scss
@@ -13,133 +13,159 @@
     @include box-sizing-border;
     float:left;
     height:100%;
-    width:70%;
+    width:calc(100% - 260px);
+    width:-moz-calc(100% - 260px);
+    width:-webkit-calc(100% - 260px);
     position:relative;
     .area{
       width:90%;
-      height:90%;
+      height:93%;
       position:relative;
       left:50%;
       margin-left:-45%;
       margin-top:30px;
-      border:1px solid $layout-border-color;
-      .header{
-        height:20px;
-        background:$nav-dark;
-      }
       .title{
-        background:#fff;
-        height:100px;
+        height:55px;
         padding-top:20px;
-        $font-color:#9d9d9d;
-        p:first-of-type{
-          text-align:center;
-          color:$font-color;
-          font-size:23px;
-          a{
-            display:inline-block;
-            $width:25px;
-            width:$width;
-            height:$width;
-            @include border-radius-same($width);
-            border:1px solid $layout-border-color;
-            text-align:center;
-            line-height:$width;
-            color:$font-color;
-            margin:0px auto 0;
-            font-size:13px;
-            position:relative;
-            top:-4px;
-            i{
-              position:relative;
-              top:1px;
-              left:1px;
-            }
-          }
+        p{
+          display:inline-block;
+          float:left;
+          font-family: "maven";
+          font-size:35px;
         }
-        a.btn{
-          margin:5px auto 0;
-          width:210px;
+        .btn{
+          float:right;
+          font-size:14px;
+          padding:12px 40px;
+          margin:0px;
         }
       }
       .projects{
-        height:calc(100% - 155px);
-        height:-moz-calc(100% - 155px);
-        height:-webkit-calc(100% - 155px);
+        height:calc(100% - 75px);
+        height:-moz-calc(100% - 75px);
+        height:-webkit-calc(100% - 75px);
         background:#fff;
         position:absolute;
         bottom:0px;
         left:0px;
         right:0px;
         overflow-y:auto;
+        border:1px solid $layout-border-color;
+        @include border-radius-block;
+        @include box-shadow(0px,1px,0px,rgba(0,0,0,0.25));
         $margin-left:15px;
         $width:220px;
         $after-width:$margin-left * 2 + $width * 3;
-
         &:after{
           @include after-clear;
         }
         .item{
           display:block;
-          border-bottom:1px solid rgba(0,0,0,0.1);
-          padding:10px 15px;
+          margin:5px 25px;
           background:#fff;
+          padding:8px 5px;
           position:relative;
-          @include transition(background);
+          border:1px solid rgba(0,0,0,0);
+          transition:background 0.15s ease-out;
           &:hover{
             background:lighten($blue,33%);
+            border:1px solid rgba(0,0,0,0.05);
           }
           &:after{
             @include after-clear;
           }
+          &:first-of-type{
+            margin:20px 25px 5px;
+          }
+          &:nth-of-type(3n+1){
+            &>span{
+              &:first-of-type{
+                 background:$blue;
+              }
+            }
+          }
+          &:nth-of-type(3n+2){
+            &>span{
+              &:first-of-type{
+                background:$yellow;
+              }
+            }
+          }
+          &:nth-of-type(3n+3){
+            &>span{
+              &:first-of-type{
+                background:$green;
+              }
+            }
+          }
           &>span{
             @include box-sizing-border;
-
             display:inline-block;
             &:first-of-type{
-              width:60px;
+              width:45px;
               position:absolute;
-              $height:22px;
+              $height:45px;
               height:$height;
               top:50%;
               margin-top:- $height/2 ;
               padding-left:10px;
+              @include border-radius-block;
               i{
-                font-size:20px;
-                color:rgba(0,0,0,0.2);
+                font-size:23px;
+                color:rgba(255,255,255,0.9);
+                position:relative;
+                top:10px;
+                left:1px;
               }
             }
+            &:nth-of-type(2){
+              margin-left:60px;
+              width:calc(100% - 105px);
+            }
             &:last-of-type{
-              padding-left:60px;
-              width:calc(100% - 60px);
+              float:right;
+              display:block;
+              position:absolute;
+              right:0px;
+              $height:45px;
+              height:$height;
+              top:50%;
+              margin-top:- $height/2 ;
+              width:45px;
+              i{
+                font-size:25px;
+                color:rgba(0,0,0,0.1);
+                position:relative;
+                top:12px;
+                left:3px;
+              }
             }
             p{
               margin:0px;
               width:100%;
               pointer-events:none;
               &:first-of-type{
-                font-size:26px;
-                color:$blue;
+                font-size:27px;
+                color:#222;
                 font-weight:bold;
               }
               &:last-of-type{
-                font-size:14px;
+                font-size:17px;
                 color:#9d9d9d;
               }
             }
           }
-
         }
       }
     }
-
   }
   .right-part{
     @include box-sizing-border;
     float:left;
     height:100%;
-    width:30%;
+    width:260px;
     border-left:1px solid $layout-border-color;
+    background:#fff;
     .area{
       box-sizing:border-box;
       height:50%;
@@ -148,8 +174,9 @@
       .title{
         font-size:20px;
         padding-top:16px;
+        padding-left:2px;
         padding-bottom:5px;
-        color:$nav-dark;
+        color:$red;
         border-bottom:1px solid rgba(0,0,0,0.3);
       }
       .item{
@@ -158,8 +185,9 @@
         padding:10px 0px ;
         background:#fff;
         border-bottom:1px dashed rgba(0,0,0,0.2);
+        cursor:default;
         &>p{
-          font-size:12px;
+          font-size:13px;
           display:table-cell;
           padding:0px 5px;
           width:calc(100% - 120px);
@@ -171,11 +199,14 @@
             color:#666;
             a{
               display:block;
-              &:first-of-type{
-                color:#222;
-              }
               .mark{
                 color:$blue;
+              }
+              &.name{
+                color:#222;
+              }
+              &.word{
+                 color:#888;
               }
             }
           }
