--- a/app/assets/stylesheets/story_sets/index.css.scss
+++ b/app/assets/stylesheets/story_sets/index.css.scss
@@ -147,7 +147,7 @@
               &:first-of-type{
                 font-size:27px;
                 color:#222;
-                font-weight:bold;
+                font-weight:normal;
               }
               &:last-of-type{
                 font-size:17px;
@@ -176,7 +176,7 @@
         padding-top:16px;
         padding-left:2px;
         padding-bottom:5px;
-        color:$red;
+        color:$green;
         border-bottom:1px solid rgba(0,0,0,0.3);
       }
       .item{
