--- a/app/assets/stylesheets/story_sets/new.css.scss
+++ b/app/assets/stylesheets/story_sets/new.css.scss
@@ -33,7 +33,9 @@
       @include after-clear;
     }
     input{
-      width:210px;
+      //fuck u ,isn't here ?!
+      width:300px;
+
     }
     textarea{
       width:600px;
