--- a/app/assets/stylesheets/help.css.scss
+++ b/app/assets/stylesheets/help.css.scss
@@ -1,18 +1,20 @@
+$light-blue:#F0F8FF;
+$red-hover:#f59b9b;
+
+$golden-text:#f2c54a;
+$layout-border-color:#e8e8e8;
+$alert-orange:#ff921e;
+
 $blue:#5fa9da;
 $blue-hover:#69aef5;
 $yellow:#edb431;
 $green:#2ab27b;
-$light-blue:#F0F8FF;
-$red:#f75460;
-$red-hover:#f59b9b;
-$green:#0cb156;
 $green-hover:transparentize($green,0.4);
+$red:#f75460;
 $nav-dark:#353a46;
-$golden-text:#f2c54a;
-$layout-border-color:#e8e8e8;
+$sidebar:lighten($nav-dark,10%);
+$border-color:#e8e8e8;
 $background-grey:#f9f9f9;
-$alert-orange:#ff921e;
-$sidebar:lighten($nav-dark,4%);
 @mixin transition($element){
   transition:$element ease-out 0.25s
 }
