--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -1,11 +1,19 @@
 <%=stylesheet_link_tag "story_sets/story" %>
 <div class="outer">
-  <aside class="left">
+  <section class="left">
     <div class="header"></div>
+  </section>
+  <aside class="right">
+    <div class="header">
+
+    </div>
     <div class='list'></div>
-    <div class='bottom'></div>
+    <div class='bottom'>
+      <a class="btn"><i class="icon  icon-upload"></i></a>
+      <input type="text" />
+      <i class="icon icon-reply reply"></i>
+    </div>
   </aside>
-  <section class="right"></section>
 </div>
 <!--<div class="story-set-show">-->
   <!--<div class="left">-->
