app center update

--- a/app/assets/stylesheets/basic.css.scss
+++ b/app/assets/stylesheets/basic.css.scss
@@ -459,7 +459,7 @@ label,p,h1,h2,h3,h4,h5{
           label{
             display:block;
             color:#fff;
-            background:$alert-orange;
+            background:$orange;
             $width:15px;
             text-align:center;
             line-height:$width + 2;
