--- a/app/assets/stylesheets/help.css.scss
+++ b/app/assets/stylesheets/help.css.scss
@@ -1,15 +1,14 @@
 $light-blue:#F0F8FF;
 $red-hover:#f59b9b;
-
 $golden-text:#f2c54a;
 $layout-border-color:#e8e8e8;
-$alert-orange:#ff921e;
 
 $blue:#5fa9da;
 $blue-hover:#69aef5;
 $yellow:#edb431;
 $green:#2ab27b;
 $green-hover:transparentize($green,0.4);
+$orange:#ff921e;
 $red:#f75460;
 $nav-dark:#353a46;
 $sidebar:lighten($nav-dark,10%);
