--- a/app/assets/stylesheets/reports/index.css.scss
+++ b/app/assets/stylesheets/reports/index.css.scss
@@ -3,140 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "../help.css.scss";
 @import "../libs/jquery.mCustomScrollbar.min.css";
+@import "./menu.css.scss";
 // #left part
 $main-height:600px - 70px;
 $list-width:220px;
-.report-menu{
-  @include box-sizing-border;
-  float:left;
-  width:$list-width;
-  height:calc( 100% - 70px );
-  position:relative;
-  section{
-    background:$sidebar;
-    @include box-shadow-inset(-3px,0px,8px,rgba(0,0,0,0.1));
-    height:100%;
-    position:relative;
-    &>.header{
-      width:100%;
-      height:50px;
-      p{
-        text-align:center;
-        color:#fff;
-        font-family:'avenir';
-        padding:14px 0px;
-        font-size:18px;
-      }
-    }
-    &>ul{
-      $li-padding:10px;
-      height:calc(100% - 109px);
-      //scroll
-      overflow-y:auto;
-      p{
-        color:lighten($nav-dark,25%);
-        font-size:13px;
-        padding-left:$li-padding;
-        margin:5px 0 0px;
-      }
-      li{
-        a{
-          $vertical-padding:6px;
-          i{
-            font-size:10px;
-            display:inline-block;
-            &.mark{
-              margin-right:10px;
-              position:relative;
-              top:-1px;
-            }
-            &.indicate{
-              float:right;
-              margin-top:2px;
-              display: none;
-            }
-          }
-          cursor:pointer;
-          color:rgba(255,255,255,0.8);
-          font-size:12px;
-          display:block;
-          padding:$vertical-padding $li-padding;
-          width:100%;
-          @include box-sizing-border;
-          &:hover{
-            color:#fff;
-            background:lighten($nav-dark,25%);
-          }
-          &.active{
-            color:#fff;
-            background:lighten($nav-dark,25%);
-            i{
-              &.indicate{
-                display:inline-block;
-              }
-            }
-          }
-        }
-      }
-    }
-    &>.footer{
-      position:absolute;
-      bottom:0;
-      left:0px;
-      right:0px;
-      height:40px;
-      padding:6px 0;
-      border-top:1px solid lighten($nav-dark,10%);
-      a{
-        position:relative;
-        font-size:21px;
-        bottom:0px;
-        @include transition(bottom);
-        cursor:pointer;
-        color:rgba(255,255,255,0.5);
-        display: inline-block;
-        text-align:center;
-        &:hover{
-          bottom:8px;
-          color:#fff;
-        }
-        @mixin after_content($content){
-          content:$content;
-          position:absolute;
-          top:24px;
-          left:0px;
-          right:0px;
-          text-align:center;
-          font-size:9px;
-        };
-        &.share{
-           float:right;
-          right:25px;
-          width:48px;
-          &:after{
-            @include after_content("DISCUSS");
-          }
-        }
-        &.snap{
-           float:right;
-          right:15px;
-          width:36px;
-          &:after{
-            @include after_content("SNAP");
-          }
-        }
-        &.subscribe{
-           float:left;
-           left:10px;
-          width:50px;
-          &:after{
-            @include after_content("SUBSCRIBE");
-          }
-        }
-      }
-    }
-  }
-}
 .snap_block{
   position:fixed;
   z-index:9999;
@@ -178,7 +48,7 @@ $list-width:220px;
   @include box-sizing-border;
   float:left;
   height:calc( 100% - 70px );
-  width:calc( 100% - 220px );
+  width:calc( 100% - 230px );
 }
 
 //set the table background
