--- a/app/assets/stylesheets/story_sets/story.css.scss
+++ b/app/assets/stylesheets/story_sets/story.css.scss
@@ -32,7 +32,7 @@
     .bottom{
       position:relative;
       height:$bottom-height;
-      background:lighten($red,5%);
+      background:lighten(#9d9d9d,21%);
       a{
         display: inline-block;
         float:left;
