--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -1,49 +1,106 @@
 <%=stylesheet_link_tag "reports/current_status" %>
-<div class="template1" id="current-status-normal">
-  <section class="condition"  id="condition">
-    <p>Condition</p>
-    <div class="header-block">
-      <p>First Time Quality (FTQ) Summary Percentage</p>
-      <p id="current-date"></p>
-      <p>Early shift</p>
-      <select id="vehicle-select">
-        <option>CF11</option>
-        <option>CF14</option>
-        <option>CF16</option>
-      </select>
+<div class="template3" id="current-status-normal">
+  <section class="content">
+    <div class="tag">
+      <div class="active">CURRENT STATUS</div>
+      <div>TARGET</div>
+      <div>ALL DEFECTS</div>
+      <div>KEY STATION DEFECTS</div>
     </div>
-    <div class="header-block">
-      <label>Export</label>
-      <a class="btn btn-success" id="quick-print">Quick print</a>
-      <a class="btn btn-success" onclick="export_report_excel()">Excel</a>
+    <div class="condition">
+      <div class="header-block">
+        <p>First Time Quality (FTQ) Summary Percentage</p>
+        <p id="current-date"></p>
+        <p>Early shift</p>
+        <select id="vehicle-select">
+          <option>CF11</option>
+          <option>CF14</option>
+          <option>CF16</option>
+        </select>
+      </div>
+      <div class="header-block">
+        <label>Setting</label>
+        <a class="btn btn-primary" id="refresh">Refresh</a>
+        <a class="btn btn-primary extra_func_btn" id="target" tag='target'>Target</a>
+      </div>
+      <div class="header-block">
+        <label>Custom</label>
+        <a class="btn btn-primary extra_func_btn" tag='all_defects'>All defects</a>
+        <a class="btn btn-primary extra_func_btn" tag='key_defects'>Key station defects</a>
+      </div>
+      <div class="header-block">
+        <label>Current time</label>
+        <p id="current-clock"></p>
+      </div>
     </div>
-    <div class="header-block">
-      <label>Setting</label>
-      <a class="btn btn-primary" id="refresh">Refresh</a>
-      <a class="btn btn-primary extra_func_btn" id="target" tag='target'>Target</a>
-    </div>
-    <div class="header-block">
-      <label>Custom</label>
-      <a class="btn btn-primary extra_func_btn" tag='all_defects'>All defects</a>
-      <a class="btn btn-primary extra_func_btn" tag='key_defects'>Key station defects</a>
-    </div>
-    <div class="header-block">
-      <label>Current time</label>
-      <p id="current-clock"></p>
+    <div class="container">
+      <div style="width:100%;height:90%" id="data_container"></div>
     </div>
   </section>
-  <section class="content">
-    <div style="width:100%;height:99%" id="data_container"></div>
+  <section class="helper">
+    <div class="snaps" id="snap-groups">
+      <p class="title">Snapshots</p>
+      <% @snaps.each do |snap| %>
+          <div class="snap-li" snap="<%= snap.id %>" type="<%= snap.type_string %>">
+            <div class="left">
+              <p><%= snap.desc %></p>
+              <p><%= time_ago_in_words(snap.created_at.localtime) %> ago</p>
+            </div>
+            <div class="right">
+              <span class="big"></span>
+              <span class="small"></span>
+              <span class="small"></span>
+            </div>
+          </div>
+      <% end %>
+    </div>
+    <div class="function">
+      <p class="title">Exports</p>
+    </div>
   </section>
 
-  <section class="snaps" id="snap-groups">
-    <% @snaps.each do |snap| %>
-        <div class="snap-li" snap="<%= snap.id %>" type="<%= snap.type_string %>">
-          <p><%= snap.desc %></p>
-          <p><%= time_ago_in_words(snap.created_at.localtime) %> ago</p>
-        </div>
-    <% end %>
-  </section>
+  <!--<section class="condition"  id="condition">-->
+    <!--<p>Condition</p>-->
+    <!--<div class="header-block">-->
+      <!--<p>First Time Quality (FTQ) Summary Percentage</p>-->
+      <!--<p id="current-date"></p>-->
+      <!--<p>Early shift</p>-->
+      <!--<select id="vehicle-select">-->
+        <!--<option>CF11</option>-->
+        <!--<option>CF14</option>-->
+        <!--<option>CF16</option>-->
+      <!--</select>-->
+    <!--</div>-->
+    <!--<div class="header-block">-->
+      <!--<label>Export</label>-->
+      <!--<a class="btn btn-success" id="quick-print">Quick print</a>-->
+      <!--<a class="btn btn-success" onclick="export_report_excel()">Excel</a>-->
+    <!--</div>-->
+    <!--<div class="header-block">-->
+      <!--<label>Setting</label>-->
+      <!--<a class="btn btn-primary" id="refresh">Refresh</a>-->
+      <!--<a class="btn btn-primary extra_func_btn" id="target" tag='target'>Target</a>-->
+    <!--</div>-->
+    <!--<div class="header-block">-->
+      <!--<label>Custom</label>-->
+      <!--<a class="btn btn-primary extra_func_btn" tag='all_defects'>All defects</a>-->
+      <!--<a class="btn btn-primary extra_func_btn" tag='key_defects'>Key station defects</a>-->
+    <!--</div>-->
+    <!--<div class="header-block">-->
+      <!--<label>Current time</label>-->
+      <!--<p id="current-clock"></p>-->
+    <!--</div>-->
+  <!--</section>-->
+
+
+  <!--<section class="snaps" id="snap-groups">-->
+    <!--<% @snaps.each do |snap| %>-->
+        <!--<div class="snap-li" snap="<%= snap.id %>" type="<%= snap.type_string %>">-->
+          <!--<p><%= snap.desc %></p>-->
+          <!--<p><%= time_ago_in_words(snap.created_at.localtime) %> ago</p>-->
+        <!--</div>-->
+    <!--<% end %>-->
+  <!--</section>-->
 </div>
 
 <section id="current-status-target" class='current-status-wrapper'>
