--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -4,14 +4,15 @@
             <p>App Center</p>
         </div>
         <ul id="my-reports">
-                <li number="0"><a menu="current_status" href="#current_status">  Current Status<i class="icon-chevron-right indicate"></i></a></li>
-                <li number="8"><a menu="daily_dpv" href="#daily_dpv"> Daily DPV&SDPV<i class="icon-chevron-right indicate"></i></a></li>
-                <li number="7"><a menu="daily_ftq" href="#daily_ftq"> Daily FTQ<i class="icon-chevron-right indicate"></i></a></li>
-                <li number="2"><a menu="station_data" href="#station_data"> Station Data<i class="icon-chevron-right indicate"></i></a></li>
-	            <li number="1"><a menu="summary_report" href="#summary_report"> Summary Report<i class="icon-chevron-right indicate"></i></a></li>
-                <li number="9"><a menu="tracking_report" href="#tracking_report"> Daily KPI Tracking<i class="icon-chevron-right indicate"></i></a></li>
-                <li number="4"><a menu="defects" href="#defects"> Defect<i class="icon-chevron-right indicate"></i></a></li>
-                <li number="3"><a menu="vehicle_info" href="#vehicle_info"> Vehicle Information<i class="icon-chevron-right indicate"></i></a></li>
+                <!--number for ajax request's address and href for window.location-->
+                <li number="1"><a menu="current_status" href="#current_status">  Current Status<i class="icon-chevron-right indicate"></i></a></li>
+                <li number="7"><a menu="daily_dpv" href="#daily_dpv"> Daily DPV&SDPV<i class="icon-chevron-right indicate"></i></a></li>
+                <li number="8"><a menu="daily_ftq" href="#daily_ftq"> Daily FTQ<i class="icon-chevron-right indicate"></i></a></li>
+                <li number="3"><a menu="station_data" href="#station_data"> Station Data<i class="icon-chevron-right indicate"></i></a></li>
+	            <li number="2"><a menu="summary_report" href="#summary_report"> Summary Report<i class="icon-chevron-right indicate"></i></a></li>
+                <li number="4"><a menu="tracking_report" href="#tracking_report"> Daily KPI Tracking<i class="icon-chevron-right indicate"></i></a></li>
+                <li number="5"><a menu="defects" href="#defects"> Defect<i class="icon-chevron-right indicate"></i></a></li>
+                <li number="6"><a menu="vehicle_info" href="#vehicle_info"> Vehicle Information<i class="icon-chevron-right indicate"></i></a></li>
         </ul>
         <div class="footer">
           <p>Operation</p>
