add api for snap

--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -1,7 +1,7 @@
 <%=stylesheet_link_tag "reports/current_status" %>
 <div class="template3" id="current-status-normal">
   <section class="content">
-    <div class="tag">
+    <div class="tag" id="tags">
       <div class="active">CURRENT STATUS</div>
       <div>TARGET</div>
       <div>ALL DEFECTS</div>
