--- a/app/views/reports/_template3.html.erb
+++ b/app/views/reports/_template3.html.erb
@@ -1,6 +1,6 @@
 <div class="template3">
   <div class="tag">CURRENT STATUS</div>
-  <section class="content">
+  <section class="content"  id="content">
      <div class="condition"></div>
      <div class="container"></div>
   </section>
