--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -1,41 +1,70 @@
 <%=stylesheet_link_tag "reports/current_status" %>
 <div class="template3" id="current-status-normal">
-  <section class="content">
+  <section class="content" id="content">
     <div class="tag" id="tags">
-      <div class="active">CURRENT STATUS</div>
-      <div>TARGET</div>
-      <div>ALL DEFECTS</div>
-      <div>KEY STATION DEFECTS</div>
+      <div class="active tagItem" tag="current_status">CURRENT STATUS</div>
+      <div class="tagItem" tag="target">TARGET</div>
+      <div class="tagItem" tag="all_defects">ALL DEFECTS</div>
+      <div class="tagItem" tag="key_station_defects">KEY STATION DEFECTS</div>
     </div>
-    <div class="condition">
-      <div class="header-block">
-        <p>First Time Quality (FTQ) Summary Percentage</p>
-        <p id="current-date"></p>
-        <p>Early shift</p>
-        <select id="vehicle-select">
-          <option>CF11</option>
-          <option>CF14</option>
-          <option>CF16</option>
-        </select>
+    <!--current status-->
+    <section id="current_status"  class='current-status-wrapper'>
+      <div class="condition">
+        <div class="header-block">
+          <p>First Time Quality (FTQ) Summary Percentage</p>
+          <p id="current-date"></p>
+          <p>Early shift</p>
+          <select id="vehicle-select">
+            <option>CF11</option>
+            <option>CF14</option>
+            <option>CF16</option>
+          </select>
+        </div>
+        <div class="header-block">
+          <a class="btn btn-primary" id="refresh">Refresh</a>
+        </div>
+        <div class="header-block">
+          <label>Current time</label>
+          <p id="current-clock"></p>
+        </div>
       </div>
-      <div class="header-block">
-        <label>Setting</label>
-        <a class="btn btn-primary" id="refresh">Refresh</a>
-        <a class="btn btn-primary extra_func_btn" id="target" tag='target'>Target</a>
+      <div class="container">
+        <div style="width:100%;height:90%" id="data_container"></div>
       </div>
-      <div class="header-block">
-        <label>Custom</label>
-        <a class="btn btn-primary extra_func_btn" tag='all_defects'>All defects</a>
-        <a class="btn btn-primary extra_func_btn" tag='key_defects'>Key station defects</a>
+    </section>
+    <!--target-->
+    <section id="target" class='current-status-wrapper'>
+      <div id="target_setting" class="wrapper-current-body target">
+        <div id="target_grid_container" class="grid_container" style="width:100%;height:100%"></div>
       </div>
-      <div class="header-block">
-        <label>Current time</label>
-        <p id="current-clock"></p>
+      <div class="wrap-current-footer" id="target_footer">
+        <p><i class="icon icon-cog"></i> setting</p>
+        <div class="item-block">
+          <p><span class="grey">when</span> Target > Current FTQ</p>
+          <input type='text' class='color-picker' id="color1"/>
+        </div>
+        <div class="item-block">
+          <p><span class="grey">when</span> Target = Current FTQ</p>
+          <input type='text' class='color-picker' id="color2"/>
+        </div>
+        <div class="item-block">
+          <p><span class="grey">when</span> Target < Current FTQ</p>
+          <input type='text' class='color-picker' id="color3"/>
+        </div>
       </div>
-    </div>
-    <div class="container">
-      <div style="width:100%;height:90%" id="data_container"></div>
-    </div>
+    </section>
+    <!--all defects-->
+    <section id="all-defects" class='current-status-wrapper'>
+      <div class="wrapper-current-body">
+        <div id="all_defects" class="data_container"></div>
+      </div>
+    </section>
+    <!--key defects-->
+    <section id="key-defects" class='current-status-wrapper'>
+      <div class="wrapper-current-body">
+        <div id="key_defects" class="data_container"></div>
+      </div>
+    </section>
   </section>
   <section class="helper">
     <div class="snaps" id="snap-groups">
@@ -58,101 +87,14 @@
       <p class="title">Exports</p>
     </div>
   </section>
-
-  <!--<section class="condition"  id="condition">-->
-    <!--<p>Condition</p>-->
-    <!--<div class="header-block">-->
-      <!--<p>First Time Quality (FTQ) Summary Percentage</p>-->
-      <!--<p id="current-date"></p>-->
-      <!--<p>Early shift</p>-->
-      <!--<select id="vehicle-select">-->
-        <!--<option>CF11</option>-->
-        <!--<option>CF14</option>-->
-        <!--<option>CF16</option>-->
-      <!--</select>-->
-    <!--</div>-->
-    <!--<div class="header-block">-->
-      <!--<label>Export</label>-->
-      <!--<a class="btn btn-success" id="quick-print">Quick print</a>-->
-      <!--<a class="btn btn-success" onclick="export_report_excel()">Excel</a>-->
-    <!--</div>-->
-    <!--<div class="header-block">-->
-      <!--<label>Setting</label>-->
-      <!--<a class="btn btn-primary" id="refresh">Refresh</a>-->
-      <!--<a class="btn btn-primary extra_func_btn" id="target" tag='target'>Target</a>-->
-    <!--</div>-->
-    <!--<div class="header-block">-->
-      <!--<label>Custom</label>-->
-      <!--<a class="btn btn-primary extra_func_btn" tag='all_defects'>All defects</a>-->
-      <!--<a class="btn btn-primary extra_func_btn" tag='key_defects'>Key station defects</a>-->
-    <!--</div>-->
-    <!--<div class="header-block">-->
-      <!--<label>Current time</label>-->
-      <!--<p id="current-clock"></p>-->
-    <!--</div>-->
-  <!--</section>-->
-
-
-  <!--<section class="snaps" id="snap-groups">-->
-    <!--<% @snaps.each do |snap| %>-->
-        <!--<div class="snap-li" snap="<%= snap.id %>" type="<%= snap.type_string %>">-->
-          <!--<p><%= snap.desc %></p>-->
-          <!--<p><%= time_ago_in_words(snap.created_at.localtime) %> ago</p>-->
-        <!--</div>-->
-    <!--<% end %>-->
-  <!--</section>-->
 </div>
 
-<section id="current-status-target" class='current-status-wrapper'>
-  <div class="wrapper-header" id="target-wrapper-header">
-    <a class="back-btn current-status-target-back-btn"><i class="icon icon-angle-left"></i> FTQ</a>
-    <p>Target setting</p>
-  </div>
-  <div id="target_setting" class="wrapper-current-body target">
-    <div id="target_grid_container" class="grid_container" style="width:100%;height:100%"></div>
-  </div>
-  <div class="wrap-current-footer" id="target_footer">
-    <p><i class="icon icon-cog"></i> setting</p>
-    <div class="item-block">
-      <p><span class="grey">when</span> Target > Current FTQ</p>
-      <input type='text' class='color-picker' id="color1"/>
-    </div>
-    <div class="item-block">
-      <p><span class="grey">when</span> Target = Current FTQ</p>
-      <input type='text' class='color-picker' id="color2"/>
-    </div>
-    <div class="item-block">
-      <p><span class="grey">when</span> Target < Current FTQ</p>
-      <input type='text' class='color-picker' id="color3"/>
-    </div>
-  </div>
-</section>
-
-<section id="current-status-all-defects" class='current-status-wrapper'>
-  <div class="wrapper-header">
-    <a class="back-btn current-status-target-back-btn"><i class="icon icon-angle-left"></i> FTQ</a>
-    <p>All defects</p>
-  </div>
-  <div class="wrapper-current-body">
-    <div id="all_defects" class="data_container"></div>
-  </div>
-</section>
-
-<section id="current-status-key-defects" class='current-status-wrapper'>
-  <div class="wrapper-header">
-    <a class="back-btn current-status-target-back-btn"><i class="icon icon-angle-left"></i> FTQ</a>
-    <p>Key station defects</p>
-  </div>
-  <div class="wrapper-current-body">
-    <div id="key_defects" class="data_container"></div>
-  </div>
-</section>
-
+<!-- /pageload-overlay -->
 <div id="current_status_loader" class="current-status-pageload-overlay" data-opening="M20,15 50,30 50,30 30,30 Z;M0,0 80,0 50,30 20,45 Z;M0,0 80,0 60,45 0,60 Z;M0,0 80,0 80,60 0,60 Z" data-closing="M0,0 80,0 60,45 0,60 Z;M0,0 80,0 50,30 20,45 Z;M20,15 50,30 50,30 30,30 Z;M30,30 50,30 50,30 30,30 Z">
   <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 80 60" preserveAspectRatio="none">
     <path d="M30,30 50,30 50,30 30,30 Z"/>
   </svg>
-</div><!-- /pageload-overlay -->
+</div>
 
 </section>
 
