--- a/app/views/reports/_template3.html.erb
+++ b/app/views/reports/_template3.html.erb
@@ -5,21 +5,26 @@
      <div class="container"></div>
   </section>
   <section class="helper">
-      <div class="function"></div>
-    <div class="snaps"></div>
+    <div class="snaps" id="snap-groups">
+      <p class="title">Snapshots</p>
+      <a class="btn btn-warning" id="snap-to-now">reset to current</a>
+      <% @snaps.each do |snap| %>
+          <div class="snap-li" snap="<%= snap.id %>" type="<%= snap.type_string %>">
+            <div class="left">
+              <p><%= snap.desc %></p>
+              <p><%= time_ago_in_words(snap.created_at.localtime) %> ago</p>
+            </div>
+            <div class="right">
+              <span class="big"></span>
+              <span class="small"></span>
+              <span class="small"></span>
+            </div>
+            <a class="remove"><i class="icon icon-trash"></i></a>
+          </div>
+      <% end %>
+    </div>
+    <div class="function">
+      <p class="title">Exports</p>
+    </div>
   </section>
-  <!--<section class="condition" id="condition">-->
-    <!--<p>Condition</p>-->
-    <!--<div class="condition-block"></div>-->
-    <!--<section class="content" >-->
-    <!--</section>-->
-  <!--</section>-->
-  <!--<section class="snaps" id="snap-groups">-->
-    <!--<% @snaps.each do |snap| %>-->
-        <!--<div class="snap-li" snap="<%= snap.id %>" type="<%= snap.type_string %>">-->
-          <!--<p><%= snap.desc %></p>-->
-          <!--<p><%= time_ago_in_words(snap.created_at.localtime) %> ago</p>-->
-        <!--</div>-->
-    <!--<% end %>-->
-  <!--</section>-->
 </div>
