--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -3,7 +3,7 @@
   <section class="content" id="content">
     <div class="tag" id="tags">
       <div class="active tagItem" tag="current_status">CURRENT STATUS</div>
-      <div class="tagItem" tag="target">TARGET</div>
+      <div class="tagItem" tag="current_status_target">TARGET</div>
       <div class="tagItem" tag="all_defects">ALL DEFECTS</div>
       <div class="tagItem" tag="key_station_defects">KEY STATION DEFECTS</div>
     </div>
@@ -33,7 +33,7 @@
       </div>
     </section>
     <!--target-->
-    <section class='current-status-wrapper' tag="target">
+    <section class='current-status-wrapper' tag="current_status_target">
       <div id="target_setting" class="wrapper-current-body target">
         <div id="target_grid_container" class="grid_container" style="width:100%;height:100%"></div>
       </div>
