--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -1,19 +1,48 @@
 <%=stylesheet_link_tag "story_sets/story" %>
 <div class="outer">
   <section class="left">
-    <div class="header"></div>
+    <div class="canvas-header"></div>
+    <div class="canvas-operation"></div>
+    <div class="canvas-main"></div>
   </section>
   <aside class="right">
     <div class="header">
-
+       <div class="left">
+         <div class="avatar"></div>
+         <p class="name">wayne.wang</p>
+         <p class="time">2015.1.1</p>
+       </div>
+      <div class="right">
+        <p>this is some introduction here</p>
+      </div>
     </div>
-    <div class='list'></div>
+    <div class='list'>
+      <div class="item conversation">
+        <div class="avatar">
+          <p class="name">wangzixiao</p>
+          <p class="time">2014-01-01</p>
+        </div>
+        <div class="content">sdfasdf</div>
+        <div class="operate"><i class="icon icon-remove"></i></div>
+      </div>
+      <div class="item attachment">
+        <div class="avatar">
+          <p class="name">wangzixiao</p>
+          <p class="time">2014-01-01</p>
+        </div>
+        <div class="attachments"></div>
+        <div class="operate"><i class="icon icon-remove"></i></div>
+      </div>
+    </div>
     <div class='bottom'>
       <a class="btn"><i class="icon  icon-upload"></i></a>
       <input type="text" />
       <i class="icon icon-reply reply"></i>
     </div>
   </aside>
+  <div class="bottom">
+    <p>some basic info</p>
+  </div>
 </div>
 <!--<div class="story-set-show">-->
   <!--<div class="left">-->
